[project]
name = "medchatbot"
version = "0.1.0"
description = "A simple RAG-based medical document chatbot built with Streamlit, LangChain, FAISS, and Groq."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fpdf>=1.7.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-groq>=0.3.0",
    "pypdf>=6.12.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
